Chapter 5 Challenge fixed rotate cheatActivity to reset cheat fixed rotate quizActivity to reset cheat

--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -28,6 +28,15 @@
             android:text="@string/false_button" />
     </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/previous_button"
+        android:layout_width="wrap_content"
+        android:layout_height="50sp"
+        android:layout_gravity="bottom|left"
+        android:src="@drawable/arrow_left"
+        android:contentDescription="@string/previous_button"
+        />
+
     <Button
         android:id="@+id/cheat_button"
         android:layout_width="wrap_content"
@@ -35,13 +44,12 @@
         android:layout_gravity="bottom|center"
         android:text="@string/cheat_button" />
 
-    <Button
+    <ImageButton
         android:id="@+id/next_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50sp"
         android:layout_gravity="bottom|right"
-        android:text="@string/next_button"
-        android:drawableRight="@drawable/arrow_right"
-        android:drawablePadding="4dp"/>
+        android:contentDescription="@string/next_button"
+        android:src="@drawable/arrow_right" />
 </FrameLayout>
 
